--- a/challenge1/style.css
+++ b/challenge1/style.css
@@ -1,4 +1,4 @@
-body {
+.card {
   background-color: rgb(43, 9, 76);
   width: 100vw;
   height: 100vh;
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 
-img {
+.img-card {
   display: block;
   margin-left: auto;
   margin-right: auto;
